--- a/Starter_Code/Crypto_Clustering_KR.ipynb
+++ b/Starter_Code/Crypto_Clustering_KR.ipynb
@@ -4974,7 +4974,7 @@
     "\n",
     "  * **Question:** After visually analyzing the cluster analysis results, what is the impact of using fewer features to cluster the data using K-Means?\n",
     "\n",
-    "  * **Answer:** "
+    "  * **Answer:** After comparing the cluster analysis from both models there is little impact to the clustering the data with K-Means. In the composite plot the majority of data remained in the same cluster from both data models with very few outliers. "
    ]
   }
  ],
