--- a/Starter_Code/Crypto_Clustering_KR.ipynb
+++ b/Starter_Code/Crypto_Clustering_KR.ipynb
@@ -2547,7 +2547,7 @@
     "\n",
     "**Question:** What is the total explained variance of the three principal components?\n",
     "\n",
-    "**Answer:** "
+    "**Answer:** The total explained variance of the three components rounds up to .88 or 88%. "
    ]
   },
   {
